Add README and simplify ViewEngine API
- ViewEngine.init() no longer requires allocator
- render() and renderTpl() accept allocator parameter
- Remove deinit() - no resources to clean up
- Remove unused parse/renderDoc methods
- Add memory management guidance to runtime.zig
- Clean up unused imports and options

--- a/src/examples/demo/views/index.pug
+++ b/src/examples/demo/views/index.pug
@@ -7,3 +7,9 @@ html
     | ballah
     | ballah
     +btn("click me ", "secondary")
+  br
+  a(href='//google.com' target="_blank") Google 1
+  br
+  a(class='button' href='//google.com' target="_blank") Google 2
+  br
+  a(class='button', href='//google.com' target="_blank") Google 3
