fix: build template tag with json data issue.

--- a/examples/demo/views/page-a.pug
+++ b/examples/demo/views/page-a.pug
@@ -13,3 +13,9 @@ block content
   ul
     each val in items
       li= val
+  input(data-json=`
+    {
+      "very-long": "piece of ",
+      "data": true
+    }
+  `)
