--- a/src/examples/demo/views/pages/about.pug
+++ b/src/examples/demo/views/pages/about.pug
@@ -48,4 +48,6 @@ block content
               li
                 a(href="/products") View Products
               li
+                a(href="/include-demo") Include Demo
+              li
                 a(href="/") Back to Home
