include, extend file path correction

--- a/examples/demo/views/pages/checkout.pug
+++ b/examples/demo/views/pages/checkout.pug
@@ -1,7 +1,7 @@
-extends layouts/base.pug
-include mixins/forms.pug
-include mixins/alerts.pug
-include mixins/buttons.pug
+extends ../layouts/base.pug
+include ../mixins/forms.pug
+include ../mixins/alerts.pug
+include ../mixins/buttons.pug
 
 block content
   h1 Checkout
