--- a/examples/demo/views/layouts/base.pug
+++ b/examples/demo/views/layouts/base.pug
@@ -7,17 +7,7 @@ html(lang="en")
     block title
       title Pugz Store
   body
-    header.header
-      .container
-        .header-content
-          a.logo(href="/") Pugz Store
-          nav.nav
-            a.nav-link(href="/") Home
-            a.nav-link(href="/products") Products
-            a.nav-link(href="/about") About
-          .header-actions
-            a.cart-link(href="/cart")
-              | Cart (#{cartCount})
+    include ../partials/navbar.pug
 
     main
       block content
